updated to latest main version
- translated some new things
- fixed/changed minor things

--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -5,9 +5,11 @@
   <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
   <author>Revan/ShadowDuke</author>
   <modioID>143281</modioID>
-  <modioFileID>220476</modioFileID>
-  <modversion>for 0.1.44396</modversion>
+  <modioFileID>223562</modioFileID>
+  <modversion>for 0.1.44593</modversion>
   <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
+  <modDependencies />
+  <modIncompatibilities />
 </ModInfo>
