--- a/Translations/German/text-improvement-change.xml
+++ b/Translations/German/text-improvement-change.xml
@@ -296,16 +296,16 @@
 		<Translation>Schrein der Tanit</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_IMPROVEMENT_SHRINE_TISHTRYA</zType>
-		<Translation>Schrein des Tishtrya</Translation>
+		<zType>TEXT_IMPROVEMENT_SHRINE_VESTA</zType>
+		<Translation>Schrein des Vesta</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_SHRINE_NEITH</zType>
 		<Translation>Schrein der Neith</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_IMPROVEMENT_SHRINE_DIANA</zType>
-		<Translation>Schrein der Diana</Translation>
+		<zType>TEXT_IMPROVEMENT_SHRINE_HVAR_KHSHAITA</zType>
+		<Translation>Schrein des Hvare-khshaeta</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_MONASTERY_ZOROASTRIANISM</zType>
